--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -1,9 +1,4 @@
-import webbrowser
-import os
-import re
 
-# Styles and scripting for the page
-main_page_head = '''
 <head>
     <meta charset="utf-8">
     <title>Fresh Tomatoes!</title>
@@ -80,10 +75,7 @@ main_page_head = '''
         });
     </script>
 </head>
-'''
 
-# The main page layout and title bar
-main_page_content = '''
 <!DOCTYPE html>
 <html lang="en">
   <body>
@@ -111,55 +103,37 @@ main_page_content = '''
       </div>
     </div>
     <div class="container">
-      {movie_tiles}
+      
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2517753454.webp" width="220" height="342">
+    <h2>复仇者联盟3：无限战争</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2514119443.webp" width="220" height="342">
+    <h2>红海行动</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2520197352.webp" width="220" height="342">
+    <h2>战犬瑞克斯</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img1.doubanio.com/view/photo/s_ratio_poster/public/p2516578307.webp" width="220" height="342">
+    <h2>头号玩家</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2516079193.webp" width="220" height="342">
+    <h2>狂暴巨兽</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="http://player.youku.com/embed/XMjUwOTY3MjgwMA==" data-toggle="modal" data-target="#trailer">
+    <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2521118750.webp" width="220" height="342">
+    <h2>巴霍巴利王2：终结</h2>
+</div>
+
     </div>
   </body>
 </html>
-'''
-
-# A single movie entry html template
-movie_tile_content = '''
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer_src="{trailer_src}" data-toggle="modal" data-target="#trailer">
-    <img src="{poster_image_url}" width="220" height="342">
-    <h2>{movie_title}</h2>
-</div>
-'''
-
-def create_movie_tiles_content(movies):
-    # The HTML content for this section of the page
-    content = ''
-    for movie in movies:
-        # Extract the youku or youtube ID from the url
-        trailer_url = movie.trailer_url
-        youku_id_match = re.search(r'(id_)(\w+=*)(\.html)', trailer_url)
-        youtube_id_match = re.search(r'(?<=v=)[^&#]+', trailer_url)
-        youtube_id_match = youtube_id_match or re.search(r'(?<=be/)[^&#]+', trailer_url)
-        trailer_youku_id = youku_id_match.group(2) if youku_id_match else None
-        trailer_youtube_id = youtube_id_match.group(0) if youtube_id_match else None
-        if trailer_youku_id != None:
-          trailer_src = 'http://player.youku.com/embed/' + trailer_youku_id
-        else:
-          trailer_src = 'http://youtube.com/embed/'+ trailer_youtube_id
-
-        # Append the tile for the movie with its content filled in
-        content += movie_tile_content.format(
-            movie_title=movie.title,
-            poster_image_url=movie.poster_image_url,
-            trailer_src=trailer_src
-        )
-    return content
-
-def open_movies_page(movies):
-  # Create or overwrite the output file
-  output_file = open('fresh_tomatoes.html', 'w', encoding='utf-8')
-
-  # Replace the placeholder for the movie tiles with the actual dynamically generated content
-  rendered_content = main_page_content.format(movie_tiles=create_movie_tiles_content(movies))
-
-  # Output the file
-  output_file.write(main_page_head + rendered_content)
-  output_file.close()
-
-  # open the output file in the browser
-  url = os.path.abspath(output_file.name)
-  webbrowser.open('file://' + url, new=2) # open in a new tab, if possible
